--- a/index.htm
+++ b/index.htm
@@ -22,7 +22,6 @@
                 <li class="menu__item"><a href="#sobre" class="menu__link">Sobre mim</a></li>
                 <li class="menu__item"><a href="#skills" class="menu__link">Skills</a></li>
                 <li class="menu__item"><a href="#hobbies" class="menu__link">Hobbies</a></li>
-                <li class="menu__item"><a href="#formacao" class="menu__link">Formação</a></li>
                 <li class="menu__item"><a href="#experiencias" class="menu__link">Projetos</a></li>
                 <li class="menu__item"><a href="mailto:flaviocardosodf@gmail.com"
                         class="menu__link email"><i class="fa-regular fa-envelope"></i></a></li>
@@ -32,9 +31,8 @@
 
     <section class="banner">
         <div class="banner__texto">
-            <h1 class="banner__texto-titulo">Olá, meu nome é Flávio Cardoso e construo páginas web</h1>
-            <p class="banner__texto-descricao">Sou estudante de programação, focado em Front End, e atualmente esotu
-                participando do projeto Oracle ONE na Alura.</p>
+            <h1 class="banner__texto-titulo">Olá, meu nome é Flávio Cardoso</h1>
+            <p class="banner__texto-descricao">Sou desenvolvedor Front End em constante aprendizado!</p>
             <ul class="banner__texto-lista">
                 <li class="banner__texto-item">
                     <a href="https://github.com/flaviocardosodf" class="banner__texto-link" target="_blank">Github
@@ -68,11 +66,10 @@
 
     <section id="sobre">
         <h2 class="sobre__titulo">Sobre mim</h2>
-        <p class="sobre__texto">Brasileiro, 34 anos, um pouco nerd 🤓</p>
-        <p class="sobre__texto">Em constante aprendizado, apaixonado por tecnologia e sempre disposto a novos desafios.
+        <p class="sobre__texto">Em constante aprendizado, entusiasta de tecnologia e sempre disposto a novos desafios.
         </p>
         <p class="sobre__texto">Trabalhei na área administrativa/financeira por mais de 10 anos e sempre gostei da área
-            de tecnologia, mas nunca tive coragem para mudar de área.</p>
+            de tecnologia, mas nunca tive coragem/oportunidade para mudar de área.</p>
         <p class="sobre__texto">Eu, como boa parte da população mundial, sofri consequências do Malware humano no ano de
             2020 e com esse obstáculo na minha caminhada, resolvi em 2022 que era a hora de finalmente migrar de área e
             partir para algo que eu realmente gostasse de fazer.</p>
@@ -151,32 +148,12 @@
         </div>
     </section>
 
-    <!-- <section id="formacao">
-        <h2 class="formacao__titulo">Formação</h2>
-        <div class="formacao__box">
-            <div class="formacao__item">
-                <div class="formacao__item-img">
-                    <img src="assets/img/UPIS.png" alt="Logo da UPIS" class="formacao__item--logo">
-                </div>
-                <h4 class="formacao__item-titulo">Ciências Econômicas</h4>
-                <p class="formacao__item-descricao">2010 - UPIS</p>
-            </div>
-            <div class="formacao__item">
-                <div class="formacao__item-img">
-                    <img src="assets/img/alura.png" alt="Logo da Alura" class="ormacao__item--logo">
-                </div>
-                <h4 class="formacao__item-titulo">Front End</h4>
-                <p class="formacao__item-descricao">Em Andamento - Alura</p>
-            </div>
-        </div>
-    </section> -->
-
     <section id="experiencias">
         <h2 class="experiencias__titulo">Experiencias Profissionais</h2>
         <div class="experiencias__box">
             <div class="experiencias__box-item">
                 <div class="experiencias__item-img">
-                    <img src="assets/img/codificador2.png" alt="Imagem do site de um decodificador de texto">
+                    <a href="https://flaviocardosodf.github.io/codificador/" target="_blank"><img src="assets/img/codificador2.png" alt="Imagem do site de um decodificador de texto"></a>
                 </div>
                 <div class="experiencias__item-texto">
                     <h2 class="experiencias__item-texto--titulo">Decodificador de texto</h2>
@@ -188,10 +165,7 @@
                 </div>
             </div>
 
-            <div class="experiencias__box-item">
-                <div class="experiencias__item-img">
-                    <img src="assets/img/fashion2.png" alt="Imagem do site de um decodificador de texto">
-                </div>
+            <div class="experiencias__box-item-esquerda">
                 <div class="experiencias__item-texto">
                     <h2 class="experiencias__item-texto--titulo">Fashion</h2>
                     <p class="experiencias__item-texto--descricao">Lading Page</p>
@@ -199,6 +173,9 @@
                         <a href="https://github.com/flaviocardosodf/fashion" target="_blank" class="experiencias__item-texto--botao">Repositório</a>
                         <a href="https://flaviocardosodf.github.io/fashion/" target="_blank" class="experiencias__item-texto--botao botao--azul">Ver Demo</a>
                     </div>
+                </div>
+                <div class="experiencias__item-img">
+                    <img src="assets/img/fashion2.png" alt="Imagem do site de um decodificador de texto">
                 </div>
                 
             </div>
@@ -217,10 +194,7 @@
                 </div>
             </div>
 
-            <div class="experiencias__box-item">
-                <div class="experiencias__item-img">
-                    <img src="assets/img/devlinks2.jpg" alt="Imagem do site de um decodificador de texto">
-                </div>
+            <div class="experiencias__box-item-esquerda">
                 <div class="experiencias__item-texto">
                     <h2 class="experiencias__item-texto--titulo">DevLinks</h2>
                     <p class="experiencias__item-texto--descricao">Links para rede sociais</p>
@@ -229,23 +203,26 @@
                         <a href="https://flaviocardosodf.github.io/devlinks/" target="_blank" class="experiencias__item-texto--botao botao--azul">Ver Demo</a>
                     </div>
                 </div>
+                <div class="experiencias__item-img">
+                    <img src="assets/img/devlinks2.jpg" alt="Imagem do site de um decodificador de texto">
+                </div>
             </div>
         </div>
     </section>
-    <!-- <section id="contato">
+    <section id="contato">
         <div class="contato__box">
             <img src="assets/img/fone.png" alt="fone de um telefone antigo com o fio">
             <div class="contato__form">
                 <h2 class="contato__form--titulo">Contato</h2>
-                <p class="contato__form--descricao">Quer entrar em contato comigo?<br>
-                    Preencha o formulário ao lado e entrarei em contato o mais rápido possível.</p>
+                <p class="contato__form--descricao">Quer entrar em contato comigo?</p>
+                <p class="contato__form--descricao">Preencha o formulário abaixo e entrarei em contato assim que possível.</p>
                     
-                    <form action="" method="post">
-                        <input type="text" class="contato__form--input" placeholder="Nome" required>
+                    <form action="https://formsubmit.co/flaviocardosodf@gmail.com" method="post">
+                        <input type="text" class="contato__form--input" placeholder="Nome" required name="name">
 
-                        <input type="email" class="contato__form--input" placeholder="E-mail" required>
+                        <input type="email" class="contato__form--input" placeholder="E-mail" required name="email">
 
-                        <input type="text" class="contato__form--input" placeholder="Assunto">
+                        <input type="text" class="contato__form--input" placeholder="Assunto" name="subject">
 
                         <textarea name="mensagem" id="" cols="30" rows="10" class="contato__form--input textarea" placeholder="Mensagem" ></textarea>
 
@@ -253,7 +230,7 @@
                     </form>
             </div>
         </div>
-    </section> -->
+    </section>
 
     <footer>
         <p>Desenvolvido por Flávio Cardoso</p>
