--- a/index.htm
+++ b/index.htm
@@ -217,7 +217,7 @@
                 <p class="contato__form--descricao">Quer entrar em contato comigo?</p>
                 <p class="contato__form--descricao">Preencha o formulário abaixo e entrarei em contato assim que possível.</p>
                     
-                    <form action="https://formsubmit.co/flaviocardosodf@gmail.com" method="post">
+                    <form action=action="https://formsubmit.io/send/flaviocardosodf@gmail.com" method="post">
                         <input type="text" class="contato__form--input" placeholder="Nome" required name="name">
 
                         <input type="email" class="contato__form--input" placeholder="E-mail" required name="email">
